# lidaEngine

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.org
android/: README.org  build.gradle
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lida/app/: Application.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/gradle/wrapper/: gradle-wrapper.properties
shaders/: CMakeLists.txt  common.h  culling.h  debug_draw.frag  debug_draw.vert  depth_reduce.comp  global.h  quad.frag  quad.vert  rect.frag  rect.vert  shadow.h  shadow_voxel.vert  text.frag  text.vert  triangle.frag  triangle.vert  vox_cull.comp  vox_cull_ext_new.comp  vox_cull_ext_ortho.comp  vox_cull_ext_persp.comp  vox_cull_ortho.comp  vox_cull_persp.comp  voxel.frag  voxel.vert  voxel_new.vert
src/: CMakeLists.txt  README.org  base.c  base.h  device.c  device.h  ecs.c  ecs.h  init.c  init.h  lida_algebra.c  lida_asset.c  lida_base.c  lida_config.c  lida_console.c  lida_device.c  lida_ecs.c  lida_engine.c  lida_gen.c  lida_input.c  lida_package.c  lida_platform.h  lida_platform1.cc  lida_platform_android.cc  lida_platform_win32.cc  lida_render.c  lida_script.c  lida_ui.c  lida_voxel.c  lida_window.c  linalg.c  linalg.h  main.c  main.cpp  memory.c  memory.h  render.c  render.h  ui.cc  ui.h  (+4 more)
src/lib/: imconfig.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  ogt_vox.h  spirv.h  stb_sprintf.h  volk.c
test/: CMakeLists.txt  core_test1.c  ecs_test2.c
